AzureResourceGroup1/azuredeploy.parameters.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "value": "eastus"
        },
        "osDiskType": {
            "value": "StandardSSD_LRS"
        },
        "addressPrefixes": {
            "value": [
                "10.0.0.0/16"
            ]
        },
        "subnets": {
            "value": [
                {
                    "name": "default",
                    "properties": {
                        "addressPrefix": "10.0.0.0/20"
                    }
                }
            ]
        },
        "virtualNetworkId": {
            "value": "/subscriptions/ab74a266-7e69-4556-9fa4-07bda996372d/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myResourceGroup-vnet"
        },
        "virtualNetworkName": {
            "value": "myResourceGroup-vnet"
        },
        "networkSecurityGroups": {
            "value": [
                {
                    "name": "basicNsgmyResourceGroup-vnet-nic01",
                    "id": "/subscriptions/ab74a266-7e69-4556-9fa4-07bda996372d/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/basicNsgmyResourceGroup-vnet-nic01",
                    "rules": [
                        {
                            "name": "HTTP",
                            "properties": {
                                "priority": 300,
                                "protocol": "TCP",
                                "access": "Allow",
                                "direction": "Inbound",
                                "sourceAddressPrefix": "*",
                                "sourcePortRange": "*",
                                "destinationAddressPrefix": "*",
                                "destinationPortRange": "80"
                            }
                        },
                        {
                            "name": "SSH",
                            "properties": {
                                "priority": 320,
                                "protocol": "TCP",
                                "access": "Allow",
                                "direction": "Inbound",
                                "sourceAddressPrefix": "*",
                                "sourcePortRange": "*",
                                "destinationAddressPrefix": "*",
                                "destinationPortRange": "22"
                            }
                        }
                    ]
                }
            ]
        },
        "networkInterfaceConfigurations": {
            "value": [
                {
                    "name": "myResourceGroup-vnet-nic01",
                    "primary": true,
                    "subnetId": "/subscriptions/ab74a266-7e69-4556-9fa4-07bda996372d/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myResourceGroup-vnet/subnets/default",
                    "applicationGatewayBackendAddressPools": [],
                    "loadBalancerBackendAddressPools": [
                        {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancerName'), parameters('backendPoolName'))]"
                        }
                    ],
                    "applicationSecurityGroups": [],
                    "loadBalancerInboundNatPools": [],
                    "enableAcceleratedNetworking": false,
                    "nsgName": "basicNsgmyResourceGroup-vnet-nic01",
                    "nsgId": "/subscriptions/ab74a266-7e69-4556-9fa4-07bda996372d/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/basicNsgmyResourceGroup-vnet-nic01",
                    "pipName": "publicIp-myResourceGroup-vnet-nic01"
                }
            ]
        },
        "backendPoolName": {
            "value": "bepool"
        },
        "loadBalancerName": {
            "value": "TP1-LoadBalancer"
        },
        "loadbalancingRuleFrontEndPort": {
            "value": 80
        },
        "loadbalancingRuleBackendEndPort": {
            "value": 80
        },
        "loadbalancingRuleProtocol": {
            "value": "Tcp"
        },
        "InboundNATRuleFrontEndPortRangeStart": {
            "value": 50000
        },
        "vmName": {
            "value": "TP-ScaleSet"
        },
        "virtualMachineScaleSetName": {
            "value": "TP-ScaleSet"
        },
        "instanceCount": {
            "value": "2"
        },
        "instanceSize": {
            "value": "Standard_DC1s_v2"
        },
        "zone": {
            "value": [
                "1",
                "2"
            ]
        },
        "zoneBalance": {
            "value": "false"
        },
        "platformFaultDomainCount": {
            "value": "1"
        },
        "scaleInPolicy": {
            "value": {
                "rules": [
                    "Default"
                ],
                "forceDeletion": false
            }
        },
        "upgradePolicy": {
            "value": "Manual"
        },
        "hibernationEnabled": {
            "value": false
        },
        "adminUsername": {
            "value": "tpuser"
        },
        "adminPassword": {
            "value": null
        },
        "securityType": {
            "value": "TrustedLaunch"
        },
        "secureBoot": {
            "value": true
        },
        "vTPM": {
            "value": true
        },
        "healthExtensionProtocol": {
            "value": "http"
        },
        "healthExtensionPort": {
            "value": 80
        },
        "healthExtensionRequestPath": {
            "value": "/"
        },
        "autoRepairsPolicyEnabled": {
            "value": false
        },
        "gracePeriod": {
            "value": "PT10M"
        },
        "autoRepairsAction": {
            "value": "Replace"
        },
        "customData": {
            "value": null
        }
    }
}
